fix: fix bugs with routes;
