# rental_app/app/Http/Requests/UpdateRentalRequest.php
@@ -24,7 +24,9 @@ class UpdateRentalRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'rental_start'  => 'date|after_or_equal:yesterday',
+            'rental_end'    => 'date|after_or_equal:rental_start',
+            'car_id'        => 'string'
         ];
     }
 }
